feat: added change posts

--- a/client/src/lang/en.json
+++ b/client/src/lang/en.json
@@ -35,7 +35,14 @@
     "Your posts": "Your posts",
     "Add Post": "Add Post",
     "loading": "loading",
-    "Number of rooms": "Number of rooms"
+    "Number of rooms": "Number of rooms",
+    "Title": "Title",
+    "Price": "Price",
+    "Type": "Type",
+    "Square": "Square",
+    "Location": "Location"
+
+
     
 
 
