fix: admin panel localization

--- a/client/src/lang/en.json
+++ b/client/src/lang/en.json
@@ -48,7 +48,10 @@
     "Results": "Results",
     "Filter": "Filter",
     "Active Posts": "Active Posts",
-    "On Moderation": "On Moderation"
+    "On Moderation": "On Moderation",
+    "LocTxt": "Move the marker to your location",
+    "Image": "Image",
+    "Drop image": "Drop image"
 
 
 
