--- a/client/src/lang/ru.json
+++ b/client/src/lang/ru.json
@@ -48,5 +48,8 @@
     "Results": "Результаты",
     "Filter": "Фильтер",
     "Active Posts": "Активные Посты",
-    "On Moderation": "На Модерации"
+    "On Moderation": "На Модерации",
+    "LocTxt": "Переместите маркер на свою локацию",
+    "Image": "Картинка",
+    "Drop image": "Отпустите картинку"
 }
