feat: added ads and ads panel

--- a/client/src/lang/en.json
+++ b/client/src/lang/en.json
@@ -51,7 +51,9 @@
     "On Moderation": "On Moderation",
     "LocTxt": "Move the marker to your location",
     "Image": "Image",
-    "Drop image": "Drop image"
+    "Drop image": "Drop image",
+    "Link": "Link",
+    "Link including https://": "Link including https://"
 
 
 
