--- a/client/src/lang/ru.json
+++ b/client/src/lang/ru.json
@@ -51,5 +51,7 @@
     "On Moderation": "На Модерации",
     "LocTxt": "Переместите маркер на свою локацию",
     "Image": "Картинка",
-    "Drop image": "Отпустите картинку"
+    "Drop image": "Отпустите картинку",
+    "Link": "Ссылка",
+    "Link including https://": "Ссылка включая https://"
 }
